...
                            <constraint firstItem="K3R-WQ-686" firstAttribute="bottom" secondItem="JfN-69-c6K" secondAttribute="bottom" id="JPe-tn-nsh"/>
                            <constraint firstItem="JfN-69-c6K" firstAttribute="top" secondItem="K3R-WQ-686" secondAttribute="top" id="MUE-5Q-Nwg"/>
                            <constraint firstItem="JfN-69-c6K" firstAttribute="leading" secondItem="K3R-WQ-686" secondAttribute="leading" id="T5p-g4-caS"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="K3R-WQ-686"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="MQW-0y-ado">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="p6X-Zx-8zY">
                            <color key="tintColor" name="ColorTheme"/>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="JvP-1M-ziz">
                            <color key="tintColor" name="ColorTheme"/>
                            <connections>
...
                            <constraint firstItem="2Dc-ev-0vO" firstAttribute="leading" secondItem="joj-o0-0S7" secondAttribute="leading" id="iEk-bA-6Gy"/>
                            <constraint firstItem="znJ-RN-xQD" firstAttribute="trailing" secondItem="0ie-Wg-33f" secondAttribute="trailing" id="oD7-Ra-jFO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="joj-o0-0S7"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="aAN-JC-Dew">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ejT-D8-8KI">
                            <color key="tintColor" name="ColorTheme"/>
                            <connections>
                                <action selector="handleCancel:" destination="kyO-hu-VIz" id="vtt-jA-ZxF"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="sSM-EO-PNe">
                            <color key="tintColor" name="ColorTheme"/>
                            <connections>
                                <action selector="handleAddContact:" destination="kyO-hu-VIz" id="kZY-NL-j4c"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
