...
        initilizations()
        addObservers()
        viewModel.createView()
    }
    
    func initilizations(){
        imageUser.accessibilityIdentifier = "PROFILE_IMAGE_IDENTIFIER"
        imageUser.layer.cornerRadius = Constants.screenWidth * 0.3 / 2
        itemDone.title = viewModel.titleDone
        ItemCancel.title = viewModel.titleCancel
        transparentNavigation()
    }
    
...
        imagePicker.delegate = self
        imagePicker.presentImagePickerOptions(showRemoveOption: true)
    }
    
    lazy var contactDetailTable: TableDataSource = {
        let dataSource = TableDataSource(tableView: self.tableView, registerCells: TableCellContactDetail.self)
        self.tableView.accessibilityIdentifier = "addContactTableView"
        return dataSource
    }()
}

extension AddContactView: PhotoPickerDelegate{
    func photoPicker(selectedImage: UIImage) {
...
